<resources>
    <!--Base strings-->
    <string name="app_name">Phew</string>
    <string name="server_client_id" translatable="false">893471240237-fah1f70h23f1mo41fgq2skgqkdvq1035.apps.googleusercontent.com</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="error">Error</string>
    <string name="dialog_continue">Continue</string>
    <string name="please_wait">Please wait…</string>
    <string name="time_out_error">ّInternet is too slow, try again later</string>
    <string name="connection_error">Error in network connection</string>
    <string name="hello">hello</string>
    <string name="login_to_account">please sign in</string>
    <string name="email_or_phone">email or phone</string>
    <string name="password">password</string>
    <string name="forget_password">forget password ?</string>
    <string name="login">login</string>
    <string name="or">or</string>
    <string name="login_with_google">login with google</string>
    <string name="confirm_password">confirm password</string>
    <string name="register_to_account">register to account</string>
    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="register">register</string>
    <string name="no_address_found">No address found</string>
    <string name="some_error_happened">Some error happened</string>
    <string name="login_success">registered successfully</string>
    <string name="enter_four_digits">enter the 4 digits</string>
    <string name="profile_images">Profile<br />\nimages</string>
    <string name="please_enter_valid_email_mobile">Please enter a valid email or mobile.</string>
    <string name="please_enter_valid_password">Please enter a valid password.</string>
    <string name="title_search">Search</string>
    <string name="title_setting">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chat</string>
    <string name="friends">Friends</string>
    <string name="all">All</string>

    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="enter_registered_mobile_number">Enter registered mobile number</string>
    <string name="already_have_account">Already have account?</string>
    <string name="send_code">Send code</string>
    <string name="enter_the_digit_code">Enter the 4-digit code</string>
    <string name="you_can_re_send_code_after">You can resend code after</string>
    <string name="resend_again">Resend again</string>
    <string name="confirm_code">Confirm code</string>
    <string name="edit_mobile_number">Edit mobile number</string>
    <string name="dash" translatable="false">-</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="save_new_password">Save new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_name">Please enter your name</string>
    <string name="passwords_not_match">Passwords not match</string>
    <string name="please_enter_valid_mobile_numbe">Please enter valid mobile</string>
    <string name="please_select_city">Please select city</string>
    <string name="please_select_your_country_first">Please select country first</string>
    <string name="please_select_your_country">Please select your country</string>
    <string name="you_are_not_allowed_to_add_more_than_picture">you are not allowed to add more than 3 picture</string>
    <string name="you_are_not_allowed_to_add_more_than_picture_5">you are not allowed to add more than 5 picture</string>
    <string name="visit_adv">Visit Adv</string>
    <string name="financier">Financier</string>
    <string name="in">in</string>
    <string name="with">with</string>
    <string name="and">and</string>
    <string name="watching">Watching</string>
    <string name="others">Others</string>
    <string name="accept">Accept</string>
    <string name="cancel2">Cancel</string>
    <string name="share_post_with">Share post with</string>
    <string name="please_enter_valid_code">Please enter valid code</string>
    <string name="waiting_friend_requests">Waiting friend requests</string>
    <string name="no_notifications">You have no notifications yet</string>
    <string name="no_friend_requests">You have no friend requests yet</string>
    <string name="sent_you_friend_request">Sent you friend request</string>
    <string name="dd" />
    <string name="friend_requests">Friend requests</string>
    <string name="all2">All</string>
    <string name="waiting_Messages">Waiting Messages</string>
    <string name="no_chats">You have no chats yet</string>
    <string name="secret_messages">Secret messages</string>
    <string name="message">Message</string>
    <string name="select_country">Select country</string>
    <string name="the_most_interactive_cities">The most interactive cities</string>
    <string name="there_are_no_cities_currently_available">There are no cities currently available</string>
    <string name="home_create_post">Home create post</string>
    <string name="home_create_watching">Home create watching</string>
    <string name="home_create_location">Home create location</string>
    <string name="home_create">Home create</string>
    <string name="post">Post</string>
    <string name="what_is_in_your_mind">What is in your mind?</string>
    <string name="who_can_see_your_post">Who can see your post?</string>
    <string name="followers">Followers</string>
    <string name="only_me">Only me</string>
    <string name="slide_to_cancel">Slide To Cancel</string>
    <string name="Write_your_message">Write your message</string>
    <string name="searching_for_watching">Searching for watching</string>
    <string name="voted_on_this_view">Voted on this view</string>
    <string name="edit_profile">Edit profile</string>
    <string name="notifications">Notifications</string>
    <string name="about_app">About app</string>
    <string name="usage_policy">Usage policy</string>
    <string name="call_us">Call us</string>
    <string name="night_mode">Night mode</string>
    <string name="all_notifications">All notifications</string>
    <string name="new_followers">New followers</string>
    <string name="mentions">Mentions</string>
    <string name="log_out">Logout</string>
    <string name="settings">Settings</string>
    <string name="save_changes">Save changes</string>
    <string name="messages">Messages</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="please_enter_current_password">Please enter current password</string>
    <string name="inactive_for_60_days">Inactive for 60 days</string>
    <string name="delete_followers_friends">Delete followers and friends</string>
    <string name="premium_membership_settings">Premium membership settings</string>
    <string name="need_help">Need help ?</string>
    <string name="edit_password">Edit password</string>
    <string name="no_user">Sorry, there are no users with this name</string>
    <string name="no_suitable_app">No suitable app found to open this account!</string>
    <string name="contacts">Communicate with us through the following means of communication</string>
    <string name="hey_check_out">Hey, check out</string>
    <string name="app_at">app at</string>
    <string name="add_friends">Add friend</string>
    <string name="remove_friends">Remove friend</string>
    <string name="follow">Follow</string>
    <string name="un_follow">UnFollow</string>
    <string name="friend">Friend</string>
    <string name="posts">Posts</string>
    <string name="followers2">Followers</string>
    <string name="following">Following</string>
    <string name="phew_premium_membership">Phew premium membership</string>
    <string name="infinite_number_of_friends">Infinite number of friends</string>
    <string name="see_benefits_of_premium_membership">See benefits of premium membership</string>
    <string name="select_package">Select package</string>
    <string name="subscribe_now">Subscribe now</string>
    <string name="no_packages">No packages found</string>
    <string name="packagee">Package</string>
    <string name="sar">SAR</string>
    <string name="send">Send</string>
    <string name="write_your_comment_here">Write your comment here…</string>
    <string name="delete">Delete</string>
    <string name="findlay">Findlay</string>
    <string name="edit_policy">Edit policy</string>
    <string name="update_privacy">Update privacy</string>
    <string name="remove">Remove</string>
    <string name="you_have_now">You have now</string>
    <string name="refuse">Refuse</string>
    <string name="searching_for_location">Searching for location</string>
    <string name="share_secret_message">Share secret message</string>
    <string name="secret_message">Secret message</string>
    <string name="re_echo_now">Re-echo now</string>
    <string name="re_echo_with_comment">Re-echo with comment</string>
</resources>