<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- title -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_16"
            android:layout_marginTop="@dimen/d_35"
            android:text="@string/hello"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:fontFamily="@font/tahomabd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- hint -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_16"
            android:text="@string/login_to_account"
            android:textColor="@color/colorGray2"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <!-- email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_16"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email_or_phone"
            android:textColorHint="@color/colorGray2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hint"

            app:startIconTint="@color/colorPrimary">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_16"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/d_20"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/colorGray2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:passwordToggleEnabled="true"
            app:startIconTint="@color/colorPrimary">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- forget pass -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorGray3"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/til_password"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <!-- login -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_bg"
            android:paddingVertical="@dimen/d_16"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_forget_pass" />

        <!-- or -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_35"
            android:text="@string/or"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/btn_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <!-- sign by google -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d_16"
            android:layout_marginVertical="@dimen/d_35"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:background="@drawable/btn_bg2"
            android:drawableStart="@drawable/ic_google"
            android:paddingHorizontal="@dimen/d_25"
            android:paddingVertical="@dimen/d_12"
            android:text="@string/login_with_google"
            android:textColor="@color/colorPrimary"
            app:icon="@drawable/ic_google"
            app:iconPadding="0dp"
            app:iconTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_or" />
        <RelativeLayout
            android:id="@+id/rel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48000002">

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Large.Pulse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:SpinKit_Color="@color/colorPrimary" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>